--- a/app/src/main/res/layout/card_history.xml
+++ b/app/src/main/res/layout/card_history.xml
@@ -8,8 +8,14 @@
     android:layout_marginRight="30dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@color/cardview_dark_background">
+        </de.hdodenhof.circleimageview.CircleImageView>
        <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,6 +23,7 @@
         android:id="@+id/cardHistoryTitle"
         android:text="test">
         </TextView>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
