--- a/app/src/main/res/layout/pop_up.xml
+++ b/app/src/main/res/layout/pop_up.xml
@@ -15,13 +15,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/translatebuttonicon"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView3"
@@ -42,6 +35,15 @@
                     android:orientation="vertical"
                     android:padding="30dp">
 
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:src="@drawable/translatebuttonicon"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="10dp"/>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -58,7 +60,7 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/"
+                        android:src="@drawable/cmparrow"/>
 
                     <EditText
                         android:layout_width="match_parent"
